webapp/frontPage/css/application.css
/* ... */
.section.goal-section .gif-title, .section.about-section .gif-title, .section.explore-section .gif-title, .section.collab-section .gif-title, .section.learn-section .gif-title { margin: 1.833em auto 5.33em auto; }
.section.goal-section .gif-title h1, .section.about-section .gif-title h1, .section.explore-section .gif-title h1, .section.collab-section .gif-title h1, .section.learn-section .gif-title h1 { margin: 0; font-family: "Georgia"; font-weight: 100; color: #2d2d2d; font-size: 3.011em; }
.section.goal-section .gif-container, .section.about-section .gif-container, .section.explore-section .gif-container, .section.collab-section .gif-container, .section.learn-section .gif-container { margin: 5.33em auto 2.66em auto; }
.section.goal-section .gif-description, .section.about-section .gif-description, .section.explore-section .gif-description, .section.collab-section .gif-description, .section.learn-section .gif-description { margin: 2.66em 0em 0em 0em; padding: 1em 4em; }
@media only screen and (max-width: 700px) { .section.goal-section .gif-description, .section.about-section .gif-description, .section.explore-section .gif-description, .section.collab-section .gif-description, .section.learn-section .gif-description { padding: 1em; } }
.section.goal-section .gif-description p, .section.about-section .gif-description p, .section.explore-section .gif-description p, .section.collab-section .gif-description p, .section.learn-section .gif-description p { margin: 0; font-size: 1.17em; font-family: "Arial"; font-weight: 100; color: #2d2d2d; line-height: 1.3em; }
.section.goal-section a.circle, .section.about-section a.circle, .section.explore-section a.circle, .section.collab-section a.circle, .section.learn-section a.circle { margin: 6.5em auto 1.833em auto; }

@-webkit-keyframes $animation_name { 0% { opacity: 1; }
  100% { opacity: 0; } }
@-moz-keyframes $animation_name { 0% { opacity: 1; }
  100% { opacity: 0; } }
@-o-keyframes $animation_name { 0% { opacity: 1; }
  100% { opacity: 0; } }
@keyframes $animation_name { 0% { opacity: 1; }
  100% { opacity: 0; } }
@-webkit-keyframes $animation_name { 0% { opacity: 0; }
  100% { opacity: 1; } }
@-moz-keyframes $animation_name { 0% { opacity: 0; }
  100% { opacity: 1; } }
@-o-keyframes $animation_name { 0% { opacity: 0; }
  100% { opacity: 1; } }
@keyframes $animation_name { 0% { opacity: 0; }
  100% { opacity: 1; } }
.fadein { -webkit-animation-delay: 0s; -ms-animation-delay: 0s; -moz-animation-delay: 0s; -o-animation-delay: 0s; animation-delay: 0s; -webkit-animation-duration: 0.4s; -ms-animation-duration: 0.4s; -moz-animation-duration: 0.4s; -o-animation-duration: 0.4s; animation-duration: 0.4s; -webkit-animation-name: fadein; -ms-animation-name: fadein; -moz-animation-name: fadein; -o-animation-name: fadein; animation-name: fadein; -webkit-animation-fill-mode: forwards; -ms-animation-fill-mode: forwards; -moz-animation-fill-mode: forwards; -o-animation-fill-mode: forwards; animation-fill-mode: forwards; }

.fadeout { -webkit-animation-delay: 0s; -ms-animation-delay: 0s; -moz-animation-delay: 0s; -o-animation-delay: 0s; animation-delay: 0s; -webkit-animation-duration: 0.4s; -ms-animation-duration: 0.4s; -moz-animation-duration: 0.4s; -o-animation-duration: 0.4s; animation-duration: 0.4s; -webkit-animation-name: fadeout; -ms-animation-name: fadeout; -moz-animation-name: fadeout; -o-animation-name: fadeout; animation-name: fadeout; -webkit-animation-fill-mode: forwards; -ms-animation-fill-mode: forwards; -moz-animation-fill-mode: forwards; -o-animation-fill-mode: forwards; animation-fill-mode: forwards; }

body .fp-tableCell { position: relative; }

div#fp-nav { width: auto; left: auto; right: 0; margin: 0 auto; max-width: 1280px; position: absolute; }
div#fp-nav.right { top: 33%; right: 24px; margin-top: 4em !important; }
@media only screen and (max-width: 800px) { div#fp-nav { display: none; } }
div#fp-nav ul { float: right; }
div#fp-nav ul li { margin: 4px; }
div#fp-nav ul li div.fp-tooltip { color: #ed365e; }
div#fp-nav ul li a span, div#fp-nav ul li a.active span { font-family: "Arial"; font-weight: 100; color: #2d2d2d; background-color: #d2d2d2; height: 8px; width: 8px; margin: -4px 0 0 -4px; }
div#fp-nav ul li a.active span { background-color: #ed365e; }

.slimScrollBar { opacity: 0 !important; }

.video-header .mfp-close { position: relative; right: 0; }

.kaptcha {margin: 8px 0 8px 0;}
.kaptcha:hover {cursor: pointer;}

.section-header {font-weight: bold; color: #2d2d2d;}

a.register-links {text-decoration: none; color: #ed365e;}

a.register-links-error {text-decoration: underline; color: #ed365e;}
a.register-links-error:hover {cursor: pointer;}

.front-page-popup-container .form .checkbox.checkboxgroup label, .create-account-modal .form .checkbox.checkboxgroup label {padding-right: 0}

.front-page-popup-container .form .credentials .checkbox.checkboxgroup, .create-account-modal .form .credentials .checkbox.checkboxgroup {margin-top: 0; padding-bottom: 0.2em;}

.account-survey-modal table {width: 100%;}
.account-survey-modal tr {margin-bottom: 0.5em;}
.account-survey-modal td.label {width: 40%; font-weight: bold;}
.account-survey-modal td label {color: #2d2d2d;}

.front-page-popup-container .form .survey-form input {width:100%; padding: 0.3em;}

.front-page-popup-container .form .survey-form input#accountothernetwork {width:93%; margin-left: 2em;}

